# Robotics-Lab-Projects

./: README.md
lab1/: gps_lcm_read.m  gps_lcm_read.m~  lab1.ppt  lcm_read.m  read_gps.py  utm_data.ods
lab1/data/: lcm-log-2018-01-27-16:35:47  utm_data.ods
lab1/log/: lcm-log-10min  lcm-log-1min  lcm-log-dynamic  lcm-log-static
lab2/lab2_ws/: rospy
lab2/lab2_ws/devel/: .catkin  .rosinstall  setup.sh
lab2/lab2_ws/devel/lib/pkgconfig/: rtk_gps_pkg.pc
lab2/lab2_ws/install/: .rosinstall  _setup_util.py  setup.sh
lab2/lab2_ws/install/lib/pkgconfig/: rtk_gps_pkg.pc
lab2/lab2_ws/install/share/rtk_gps_pkg/: package.xml
lab2/lab2_ws/install/share/rtk_gps_pkg/cmake/: rtk_gps_pkg-msg-paths.cmake  rtk_gps_pkgConfig.cmake
lab2/lab2_ws/results/: Closed_area_stationary_2018-02-08-13-11-51.bag  Closed_area_walk_2018-02-08-13-19-59.bag  Open_area_walk_2018-02-09-14-55-37.bag  average_results.txt  plotHis.m  read_gps_bag.m
lab2/lab2_ws/src/rtk_gps_pkg/: CMakeLists.txt  package.xml
lab2/lab2_ws/src/rtk_gps_pkg/scripts/: gps2utm_node.py  rospy  rtk_gps.launch  rtk_gps_node.py  socket
lab3/: VN-100 specs  gps_imu_lcm_read.m  lab3.pptx
lab3/lcmtypes/: GPS_struct.lcm  IMU_struct.lcm  build_imu_jar.sh  read_gps.py  read_imu.py  runspy.sh
lab3/lcmtypes/gps_lcm/: gps_t.java
lab3/lcmtypes/imu_lcm/: imu_t.java
lab3/lcmtypes/log/: lcm-log-test
lab3/log/: lcm-log-stationary
lab4/: Calib_Results.m  Calib_Results.mat  README.txt  calib_data.mat  image_stitch.m  lab4.pptx
lab4/Camera Calibration/: Calib_Results_old0.m  Calib_Results_old0.mat  calib_data.mat
(+3 files in other folders)
