<?xml version="1.0"?>
<package format="2">
  <name>rtk_gps_pkg</name>
  <version>0.0.1</version>
  <description>The rtk_gps package</description>

  <maintainer email="malcolmleclair@gmail.com">Malcolm LeClair</maintainer>
  <license>BSD</license>
  <author email="malcolmleclair@gmail.com">Malcolm LeClair</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


</package>
